--- a/Web/public/styles.css
+++ b/Web/public/styles.css
@@ -1,3 +1,4 @@
+/*
 body {
   font-family: "Public Pixel", sans-serif;
   color: white;
@@ -14,4 +15,26 @@ body {
   background-color: transparent;
   border-color: transparent;
   cursor: pointer;
+}
+*/
+
+html,
+body,
+pre,
+code,
+kbd,
+samp {
+  font-family: "Press Start 2P";
+}
+
+body {
+  padding: 0 2rem;
+  margin: 0 2rem;
+}
+
+.container {
+  max-width: 980px;
+  margin: 0 auto;
+  margin-top: 150px;
+  text-align: center;
 }
