--- a/Web/public/styles.css
+++ b/Web/public/styles.css
@@ -38,3 +38,11 @@ body {
   margin-top: 150px;
   text-align: center;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
